creacion de header y main en el index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1></h1>
+            <p></p>
+        </section>
+        <section>
+            <article></article>
+        </section>
+    </main>
 </body>
 </html>
