contenido en la estructa html

--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
     </header>
     <main>
         <section>
-            <h1></h1>
-            <p></p>
+            <h1>titulo del sitio</h1>
+            <p>esto es un parrafo</p>
         </section>
         <section>
-            <article></article>
+            <article>
+                <h2>card</h2>
+                <div>
+                    info de la card
+                </div>
+            </article>
         </section>
     </main>
 </body>
