--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section>
-            <h1></h1>
+            <h1>ESTAMOS EN MI RAMITA</h1>
             <p></p>
         </section>
         <section>
