--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <p></p>
         </section>
         <section>
-            <article></article>
+            <article>
+                <h2>dada</h2>
+            </article>
         </section>
     </main>
 </body>
