creacion de una seccion

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
                 <h2>card</h2>
                 <div>
                     info de la card
+
                 </div>
             </article>
+        </section>
+        <section>
+            article
         </section>
     </main>
 </body>
