--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </article>
         </section>
         <section>
-            article
+            <article>MODIFICACION SIMULADA</article>
         </section>
     </main>
 </body>
